<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:textSize="16sp"/>

    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_products"
        android:textSize="16sp"/>

    <item
        android:id="@+id/navigation_local_gallery"
        android:icon="@drawable/ic_local_gallery"
        android:title="@string/title_gallery"
        android:textSize="16sp"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/title_profile"
        android:textSize="16sp"/>

</menu>