<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.acnescan.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.dicoding.acnescan.ui.rekomendasi.RekomendasiFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.dicoding.acnescan.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.dicoding.acnescan.ui.login.MainActivity"
        android:label="MainActivity" />
    <activity
        android:id="@+id/bottomNavigation"
        android:name="com.dicoding.acnescan.ui.BottomNavigation"
        android:label="BottomNavigation" />
    <activity
        android:id="@+id/register"
        android:name="com.dicoding.acnescan.ui.Register"
        android:label="Register" />
</navigation>