<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.camera.ResultActivity">

    <!-- ImageView untuk menampilkan gambar hasil analisis -->
    <ImageView
        android:id="@+id/image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/image_analysis"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/result_text_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Kontainer untuk menampilkan hasil analisis -->
    <LinearLayout
        android:id="@+id/result_text_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Judul hasil analisis -->
        <TextView
            android:id="@+id/analysis_result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_placeholder"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp" />

        <!-- TextView untuk menampilkan hasil analisis jerawat -->
        <TextView
            android:id="@+id/analysis_result_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipe_jerawat"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp" />

        <!-- TextView untuk menampilkan confidence score -->
        <TextView
            android:id="@+id/analysis_result_confidence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confidence_score"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp" />

    </LinearLayout>

    <!-- Tombol untuk kembali ke halaman sebelumnya -->
    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/button_back"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
