<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    tools:context=".ui.products.ProductsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/header_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#365545"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skincare"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:layout_gravity="center_vertical" />

            <ImageView
                android:id="@+id/header_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/logo_icon"
                android:src="@drawable/baseline_face_retouching_natural_24" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Search Bar -->
    <EditText
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/search_product"
        android:background="@drawable/search_bar_bg"
        android:paddingHorizontal="12dp"
        android:drawableStart="@drawable/baseline_search_24"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/header_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Product List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_product" />

</androidx.constraintlayout.widget.ConstraintLayout>
